# meshtastic-gopher-server

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
src/meshtastic_gopher/: __init__.py  cli.py  config.py  server.py
src/meshtastic_gopher/core/: __init__.py  command_parser.py  content_chunker.py  menu_renderer.py  session.py  session_manager.py
src/meshtastic_gopher/interfaces/: __init__.py  content_provider.py  message_transport.py
src/meshtastic_gopher/providers/: __init__.py  filesystem_provider.py
src/meshtastic_gopher/transport/: __init__.py  meshtastic_transport.py
tests/: __init__.py  conftest.py  test_cli.py  test_command_parser.py  test_config.py  test_content_chunker.py  test_filesystem_provider.py  test_integration.py  test_menu_renderer.py  test_meshtastic_transport.py  test_session.py  test_session_manager.py
